rnsc/test_data/rns_integration/error/parser/code_header/missing_both.rns
.class MissingBoth
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code
    return
  .code_end
.method_end
.class_end
